# AlgoScore

./: .DirIcon  .gitignore  081210-18ch.aiff  AppInfo.xml  AppRun  COPYING  ChangeLog  README  TODO  algoscore  algoscore.old  index.html
Help/: ChangeLog  algoscore-manual-plain.html  algoscore-manual.html
classes/: audiobus.nas  auxinputs.nas  blockview.nas  cs.nas  midibus.nas  morph.nas  oscbus.nas  plot.nas  sendrecv.nas  signalbus.nas  single.nas  text.nas  timegrid.nas
docs/: ChangeLog  algoscore-manual-plain.html  algoscore-manual.html
examples/: blockview_test.as  csound_test.as  dategen_evget.as  ev_extract.as  event_pack.as  evgen_test.as  midi_test.as  morph_test.as  osc_test.as  osc_test.csd  osc_test2.as  osc_test2.csd  signal_test.as  test.orc  transfunc_aux_test.as
lib/: _gtk.nas  algoscore-driver.nas  algoscore.nas  black.pal  browser.nas  dark.theme  debug.nas  default.pal  default.theme  editor.nas  globals.nas  gtk.nas  inspector.nas  interval.nas  inverted.pal  logwin.nas  math.nas  opensave.nas  optbox.nas  options.nas  outbus.nas  palette.nas  plot.nas  prefs_ui.nas  progress.nas  propbox.nas  regex.nas  score_ui.nas  time.nas  top_ui.nas  unix.nas  utils.nas  vec.nas  white.theme  winreg.nas  xml.nas
old/: OLD-config.h.in  bus.nas  cs_nasal.nas  curves.nas  graphics.nas  hardware.c  hardware.h  johan_test.as  key-events.nas  keys.nas  metadata_ui.nas  objbox.nas  old_hardware.c  popup.nas  test.nas
old/old_autotools/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
old/old_autotools/nasal/: Makefile.am  Makefile.in
old/old_syntax/: code.c  code.h  codegen.c  data.h  debug.c  gc.c  hash.c  lib.c  naref.h  parse.c  utf8lib.c  vector.c
old/tests/: 6ch.as  6ch.orc  audiotest.as  conpos_test.as  conproptest.as  cs_test.as  cs_test_inlet.as  csbus_test.as  dkjl_duo.as  evgen_test.as  evgen_test2.as  evgen_test3.as  evgen_test4.as  evtest.as  evtest2.as  example.as  foobar.as  globtest.as  miditest.as  sendrecv_test.as  sndfile_test.as  test.orc  test2.orc  test_project.as  testprint.as  tone_fb_test.as
src/: CMakeLists.txt  algoscore.c  config.h.cmake  csoundlib.c  ige-mac-menu.c  make_build  make_release  mathxlib.c  playbuslib.c  setup_osx_env.sh  sflib.c  tarball.exclude  utils.c  utils.h
src/build.dbg/: CMakeCache.txt  Makefile  cmake_install.cmake
src/build.dbg/nasal/: Makefile
src/doc/: MOVED.html  MOVED.t2t  README  as.css  baseclasses.inc  classes.inc  commands.t2t  examples.t2t  install.t2t  intro.t2t  lout_header  lout_setup  main.t2t  make_html  osxbuild.t2t  output.t2t  softs.t2t  using.t2t
src/doc/old/: algoscore-intro.txt  algoscore-manual.txt  as.css  as_intro.txt  classes.inc  make_html
src/macosx/: ige-mac-bundler  make_app  pcre_portfile.diff
src/macosx.old/: AlgoScore  Info.plist  Info.plist.in  Makefile  make_app  osx-app.sh  x11-fix.sh
src/macosx.old/Resources/: AlgoScore.icns  openDoc  script
src/macosx.old/ScriptExec/: main.c
src/macosx.old/ScriptExec/ScriptExec.xcodeproj/: project.pbxproj
src/macosx/algoscore/: Info.plist  Info.plist.in  algoscore.bundle
src/macosx/bundler/: bundler.py  launcher.sh
src/nasal/: CMakeLists.txt  cairolib.c  code.h  data.h  debug.c  gc.c  gtklib.c  gtklib.h  hash.c  iolib.c  iolib.h  lib.c  mathlib.c  misc.c  naref.h  nasal.h  parse.c  parse.h  regexlib.c  sqlitelib.c  thread-posix.c  thread-win32.c  threadlib.c  unixlib.c  utf8lib.c  vector.c
src/nasal/CVS/: Entries  Repository  Root
src/plugin_test/: Makefile  README  foo.c
src/unused/: srclib.c  watchdog.c  watchdog.h
