AC_INIT(algoscore, 0.1)

AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_LIBTOOL
AC_ISC_POSIX
AC_STDC_HEADERS

CPPFLAGS="$CPPFLAGS -I/usr/local/include"
LDFLAGS="$LDFLAGS -L/usr/local/lib"

AC_SEARCH_LIBS(sin, m)

#AC_CHECK_LIB(pcre, pcre_compile, [AC_DEFINE([HAVE_PCRE],[],[pcre])])
#AM_CONDITIONAL(HAVE_PCRE, test "$HAVE_LIBPCRE")

AC_SEARCH_LIBS(pcre_compile, [pcre], [AC_DEFINE([HAVE_PCRE],[],[pcre])])
AM_CONDITIONAL(HAVE_PCRE, test x$ac_cv_search_pcre_compile != xno)

#PKG_CHECK_MODULES(SRC, samplerate)
#CFLAGS="$CFLAGS $SRC_CFLAGS"
#LIBS="$LIBS $SRC_LIBS"

AC_CHECK_LIB(sndfile, sf_open)
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(dl, dlopen)

PKG_CHECK_MODULES(JACK, jack >= 0.99.0, FOUND_JACK="yes", configure_error="no")
if test "x$FOUND_JACK" = xyes
then
   AC_DEFINE([HAVE_JACK], [], [There is Jack])
   PKG_CHECK_MODULES(STABLE_JACK_MIDI, jack >= 0.105.0,
    HAVE_STABLE_JACK_MIDI="yes", [configure_error="no" AC_MSG_RESULT(no)])
   if test "x$HAVE_STABLE_JACK_MIDI" = xyes
   then
     AC_DEFINE([HAVE_STABLE_JACK_MIDI], [], \
      [Use the stable MIDI API (0.105.0 and later).])
   else
     PKG_CHECK_MODULES(OLD_JACK_MIDI, jack >= 0.102.27, \
      HAVE_OLD_JACK_MIDI="yes", [configure_error="no" AC_MSG_RESULT(no)])
     if test "x$HAVE_OLD_JACK_MIDI" = xyes
     then
       AC_DEFINE([HAVE_OLD_JACK_MIDI], [], \
        [Use the old MIDI API (0.102.27 to 0.104.0).])
     else
       AC_DEFINE([HAVE_ANCIENT_JACK], [], [Jack is really old])
     fi
   fi
   CFLAGS="$CFLAGS $JACK_CFLAGS"
   LIBS="$LIBS $JACK_LIBS"
else
  AC_CHECK_FRAMEWORK([Jack], [], FOUND_JACK="yes")
  if test "x$FOUND_JACK" = xyes
  then
    if test "x$HAVE_STABLE_JACK_MIDI" = xyes
    then
      AC_DEFINE([HAVE_STABLE_JACK_MIDI], [], \
       [Use the stable MIDI API (0.105.0 and later).])
    else
      if test "x$HAVE_OLD_JACK_MIDI" = xyes
      then
        AC_DEFINE([HAVE_OLD_JACK_MIDI], [], \
         [Use the old MIDI API (0.102.27 to 0.104.0).])
      else
        AC_DEFINE([HAVE_ANCIENT_JACK], [], [Jack is really old])
        AC_MSG_WARN([Found Jack framework but version is unknown])
        AC_MSG_WARN([Please set HAVE_STABLE_JACK_MIDI=yes if you have Jack \
0.105.0 or later])
        AC_MSG_WARN([or HAVE_OLD_JACK_MIDI=yes if you have Jack \
0.102.27 to 0.104.0.])
        AC_MSG_WARN([If you have an older Jack, do nothing and MIDI will be \
disabled.])
      fi
    fi
  fi
fi

AC_CHECK_FRAMEWORK([CsoundLib],[],[AC_DEFINE([CSOUND_FRAMEWORK],[],[csound is framework]) FOUND_CSOUND="yes"])
AC_SEARCH_LIBS(csoundCompile, [csound], [FOUND_CSOUND="yes"])

if test "x$FOUND_CSOUND" = xyes
then
  AC_DEFINE([HAVE_CSOUND],[],[csound available])
fi
AM_CONDITIONAL(HAVE_CSOUND, [test "x$FOUND_CSOUND" = xyes])

PKG_CHECK_MODULES(GTK, [gtk+-2.0 gthread-2.0])
CFLAGS="$CFLAGS $GTK_CFLAGS"
LIBS="$LIBS $GTK_LIBS"

AC_CONFIG_FILES([Makefile
                 nasal/Makefile])
AC_OUTPUT
